--- a/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
+++ b/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
@@ -269,7 +269,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="GMu-dT-BbT" kind="push" id="lhz-tX-Y67"/>
+                                            <action selector="showTechInfo:" destination="bwh-Hy-8Oa" eventType="touchUpInside" id="HdF-gN-Crw"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="CxS-kp-Pzz" userLabel="Tour Button">
@@ -284,7 +284,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="GMu-dT-BbT" kind="push" id="hW0-0s-ehq"/>
+                                            <action selector="showTechInfo:" destination="bwh-Hy-8Oa" eventType="touchUpInside" id="8bK-kY-9xU"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="tBL-Gk-oPU" userLabel="Fan Fest Button">
@@ -299,7 +299,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="GMu-dT-BbT" kind="push" id="TbQ-ux-BeO"/>
+                                            <action selector="showTechInfo:" destination="bwh-Hy-8Oa" eventType="touchUpInside" id="mm3-3i-wnH"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="TGd-F9-I6g" userLabel="Track Button">
@@ -314,7 +314,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="GMu-dT-BbT" kind="push" id="DUF-r4-Mq0"/>
+                                            <action selector="showTechInfo:" destination="bwh-Hy-8Oa" eventType="touchUpInside" id="eW1-FH-9x2"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="h2q-qq-HEM" userLabel="Driver Button">
@@ -329,7 +329,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="GMu-dT-BbT" kind="push" id="rDa-XA-Ilz"/>
+                                            <action selector="showTechInfo:" destination="bwh-Hy-8Oa" eventType="touchUpInside" id="DrV-kh-y33"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="8CC-c9-Mph">
@@ -345,10 +345,10 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="GMu-dT-BbT" kind="push" id="WBx-59-kql"/>
+                                            <action selector="showTechInfo:" destination="bwh-Hy-8Oa" eventType="touchUpInside" id="DPL-Vj-siO"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="o5Q-T3-oCC">
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="o5Q-T3-oCC" userLabel="Button - MOBIL 1 DRIVERS">
                                         <rect key="frame" x="78" y="271" width="164" height="22"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Helvetica-BoldOblique" family="Helvetica" pointSize="18"/>
@@ -361,7 +361,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="GMu-dT-BbT" kind="push" id="GGa-VH-Zjf"/>
+                                            <action selector="showTechInfo:" destination="bwh-Hy-8Oa" eventType="touchUpInside" id="bhk-EK-mNY"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Ibx-sf-ZHF">
@@ -377,7 +377,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="GMu-dT-BbT" kind="push" id="6CK-h7-PtY"/>
+                                            <action selector="showTechInfo:" destination="bwh-Hy-8Oa" eventType="touchUpInside" id="bNp-Z1-9uB"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="bHA-wD-1zA">
@@ -393,7 +393,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="GMu-dT-BbT" kind="push" id="R5D-IY-Yof"/>
+                                            <action selector="showTechInfo:" destination="bwh-Hy-8Oa" eventType="touchUpInside" id="FKM-sq-U8B"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5RF-Lx-P6j">
@@ -409,7 +409,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="GMu-dT-BbT" kind="push" id="a3J-ds-5e8"/>
+                                            <action selector="showTechInfo:" destination="bwh-Hy-8Oa" eventType="touchUpInside" id="6sJ-LS-gN2"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -431,6 +431,7 @@
                         <outlet property="tourButton" destination="CxS-kp-Pzz" id="WeL-W7-wyW"/>
                         <outlet property="trackButton" destination="TGd-F9-I6g" id="vVN-Ye-se4"/>
                         <outlet property="trackText" destination="bHA-wD-1zA" id="XM6-uB-i30"/>
+                        <segue destination="GMu-dT-BbT" kind="push" identifier="showStoryView" id="pTv-D8-Owa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tR5-r4-wf8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -656,6 +657,7 @@ Circuit of The Americas is ideally situated on a 1000-acre site in southeast Aus
         <class className="M1TechnologyViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/M1TechnologyViewController.h"/>
             <relationships>
+                <relationship kind="action" name="showTechInfo:"/>
                 <relationship kind="outlet" name="carsText" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="driversButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="driversText" candidateClass="UIButton"/>
@@ -679,7 +681,4 @@ Circuit of The Americas is ideally situated on a 1000-acre site in southeast Aus
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
-    <inferredMetricsTieBreakers>
-        <segue reference="rDa-XA-Ilz"/>
-    </inferredMetricsTieBreakers>
 </document>
