--- a/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
+++ b/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
@@ -29,14 +29,17 @@
             </objects>
             <point key="canvasLocation" x="1113" y="-236"/>
         </scene>
-        <!--View Controller - News Item-->
+        <!--News Article View Controller - News Item-->
         <scene sceneID="Hsz-YB-CL3">
             <objects>
-                <viewController id="9lX-bg-GJq" sceneMemberID="viewController">
+                <viewController id="9lX-bg-GJq" customClass="M1NewsArticleViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ViY-eK-ThR" customClass="UIWebView">
                         <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="delegate" destination="9lX-bg-GJq" id="qYn-r4-RRW"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" title="News Item" id="W89-Te-tcU"/>
                 </viewController>
@@ -634,6 +637,67 @@ Circuit of The Americas is ideally situated on a 1000-acre site in southeast Aus
         <image name="TickerGradientExtended@2x.png" width="640" height="1260"/>
         <image name="VideoCarousel.png" width="320" height="353"/>
     </resources>
+    <classes>
+        <class className="M1CountdownViewController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1CountdownViewController.h"/>
+        </class>
+        <class className="M1FirstViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1FirstViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="newsTable" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="M1MapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1MapViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="toggleMapView:" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="containerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="infoView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="mapScrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+            </relationships>
+        </class>
+        <class className="M1NavigationBar" superclassName="UINavigationBar">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1NavigationBar.h"/>
+        </class>
+        <class className="M1NewsArticleViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1NewsArticleViewController.h"/>
+        </class>
+        <class className="M1ScheduleViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1ScheduleViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="scheduleTabTable" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="scheduleTabTitle" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="M1TechnologyStoryViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1TechnologyStoryViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="infoSection" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="M1TechnologyViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1TechnologyViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="showTechInfo:"/>
+                <relationship kind="outlet" name="carsText" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="driversButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="driversText" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="fanFestText" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="technologyScroller" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="tourButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="trackButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="trackText" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="M1VideoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1VideoViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="videoThumbnailSelect:"/>
+                <relationship kind="outlet" name="videoScrollView" candidateClass="UIScrollView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
